--- a/.github/workflows/generate-proto-go.yaml
+++ b/.github/workflows/generate-proto-go.yaml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - feature/*
-
 env:
   GO_VERSION: 1.23
 jobs:
@@ -12,11 +11,5 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Install protoc
-        run: go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          repository: csku/task-nexus-proto-go
