--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,7 +10,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: run protolint
-        uses: plexsystems/protolint-action@v0.7.0
-        with:
-          configDirectory: linter
+      - name: Set buf cli
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Lint protos
+        uses: bufbuild/buf-lint-action@v1
