--- a/.github/workflows/generate-proto-go.yaml
+++ b/.github/workflows/generate-proto-go.yaml
@@ -12,4 +12,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          repository: csku/task-nexus-proto-go
+          repository: cnc-csku/task-nexus-proto-go
+          ref: 'main'
