add path on checkout

--- a/.github/workflows/generate-proto-go.yaml
+++ b/.github/workflows/generate-proto-go.yaml
@@ -14,3 +14,4 @@ jobs:
         with:
           repository: cnc-csku/task-nexus-proto-go
           ref: 'main'
+          path: task-nexus-proto-go
