--- a/.github/workflows/generate-proto-go.yaml
+++ b/.github/workflows/generate-proto-go.yaml
@@ -35,4 +35,5 @@ jobs:
           git config --local user.email "github-actions@github.com"
           git add --all
           git commit -m "Update generated code"
-          git push https://github.com/cnc-csku/task-nexus-proto-go.git HEAD:main
+          git tag "v0.0.0"
+          git push https://github.com/cnc-csku/task-nexus-proto-go.git HEAD:main --tags
