--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Build protos
         run: |
           cd task-nexus-proto-go
-          buf generate
+          buf generate 
 
       - name: Create version tag
         id: create_tag
@@ -36,7 +36,7 @@ jobs:
           MAJOR=${{ vars.MAIN_MAJOR_VERSION }}
           MINOR=$((${{ vars.MAIN_MINOR_VERSION }} + 1))
           PATCH=0
-          gh variable set $MINOR --body
+          gh variable set $MINOR --body "$MINOR"
           echo "TARGET_VERSION=$TARGET_VERSION" >> $GITHUB_ENV
 
       - name: Commit generated code
