--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Create version tag
         id: create_tag
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}`
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           MAJOR=${{ vars.MAIN_MAJOR_VERSION }}
           MINOR=$((${{ vars.MAIN_MINOR_VERSION }} + 1))
