--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -54,5 +54,5 @@ jobs:
           git config --local user.email "github-actions@github.com"
           git add --all
           git commit -m "Update generated code"
-          git tag -v $TARGET_VERSION -m "Release $TARGET_VERSION"
+          git tag $TARGET_VERSION
           git push https://github.com/cnc-csku/task-nexus-proto-go.git HEAD:main --tags
