--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -11,8 +11,6 @@ jobs:
       id-token: write
       contents: read
     runs-on: ubuntu-latest
-    env:
-      TARGET_VERSION: v0.0.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -45,7 +43,7 @@ jobs:
           gh variable set MAIN_MINOR_VERSION --body $MINOR
 
           echo v$MAJOR.$MINOR.$PATCH
-          echo "TARGET_VERSION=$TARGET_VERSION" >> $GITHUB_ENV
+          echo "TARGET_VERSION=$TARGET_VERSION" >> $GITHUB_OUTPUT
 
       - name: Commit generated code
         run: |
@@ -54,5 +52,5 @@ jobs:
           git config --local user.email "github-actions@github.com"
           git add --all
           git commit -m "Update generated code"
-          git tag $TARGET_VERSION
+          git tag -v ${{ steps.create_tag.outputs.TARGET_VERSION }} -m "Release v${{ steps.create_tag.outputs.TARGET_VERSION }}"
           git push https://github.com/cnc-csku/task-nexus-proto-go.git HEAD:main --tags
