--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -41,9 +41,8 @@ jobs:
           PATCH=0
 
           gh variable set MAIN_MINOR_VERSION --body $MINOR
-
-          echo v$MAJOR.$MINOR.$PATCH
-          echo "TARGET_VERSION=$TARGET_VERSION" >> $GITHUB_OUTPUT
+          
+          echo "TARGET_VERSION=$v$MAJOR.$MINOR.$PATCH" >> $GITHUB_OUTPUT
 
       - name: Commit generated code
         run: |
@@ -52,5 +51,5 @@ jobs:
           git config --local user.email "github-actions@github.com"
           git add --all
           git commit -m "Update generated code"
-          git tag ${{ steps.create_tag.outputs.TARGET_VERSION }}"
+          git tag ${{ steps.create_tag.outputs.TARGET_VERSION }}
           git push https://github.com/cnc-csku/task-nexus-proto-go.git HEAD:main --tags
