--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -11,10 +11,11 @@ jobs:
       id-token: write
       contents: read
     runs-on: ubuntu-latest
-    env:
-      TARGET_VERSION: v0.0.0
     steps:
       - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Checkout proto-go repo
         uses: actions/checkout@v4
         with:
           repository: cnc-csku/task-nexus-proto-go
@@ -28,16 +29,20 @@ jobs:
       - name: Build protos
         run: |
           cd task-nexus-proto-go
-          buf generate 
+          buf generate
 
       - name: Create version tag
         id: create_tag
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           MAJOR=${{ vars.MAIN_MAJOR_VERSION }}
           MINOR=$((${{ vars.MAIN_MINOR_VERSION }} + 1))
           PATCH=0
-          gh variable set $MINOR --body "$MINOR"
-          echo "TARGET_VERSION=$TARGET_VERSION" >> $GITHUB_ENV
+
+          gh variable set MAIN_MINOR_VERSION --body $MINOR
+          
+          echo "TARGET_VERSION=v$MAJOR.$MINOR.$PATCH" >> $GITHUB_OUTPUT
 
       - name: Commit generated code
         run: |
@@ -46,5 +51,13 @@ jobs:
           git config --local user.email "github-actions@github.com"
           git add --all
           git commit -m "Update generated code"
-          git tag -v $TARGET_VERSION -m "Release $TARGET_VERSION"
+          git tag ${{ steps.create_tag.outputs.TARGET_VERSION }}
           git push https://github.com/cnc-csku/task-nexus-proto-go.git HEAD:main --tags
+
+      - name: Tag version
+        id: tag_version
+        run: |
+          git config --local user.name "github-actions"
+          git config --local user.email "github-actions@github.com"
+          git tag $TARGET_VERSION
+          git push --tags
