--- a/.github/workflows/generate-proto-go.yaml
+++ b/.github/workflows/generate-proto-go.yaml
@@ -49,8 +49,8 @@ jobs:
       - name: Commit generated code
         run: |
           cd task-nexus-proto-go
-          git config --local user.name "github-actions"
-          git config --local user.email "github-actions@github.com"
+          git config --local user.name "${{ github.actor }}"
+          git config --local user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
           git add --all
           git commit -m "Update generated code"
           git tag ${{ steps.create_tag.outputs.TARGET_VERSION }}
@@ -59,7 +59,7 @@ jobs:
       - name: Tag version
         id: tag_version
         run: |
-          git config --local user.name "github-actions"
-          git config --local user.email "github-actions@github.com"
+          git config --local user.name "${{ github.actor }}"
+          git config --local user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
           git tag ${{ steps.create_tag.outputs.TARGET_VERSION }}
           git push --tags
