--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_PAT }}\
+          token: ${{ secrets.GH_PAT }}
           ref: dev
 
       - name: Checkout proto-go repo
