change buf file gen

--- a/.github/workflows/generate-proto-go-dev.yaml
+++ b/.github/workflows/generate-proto-go-dev.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Build protos
         run: |
           cd task-nexus-proto-go
-          buf generate
+          buf generate --template buf.gen.dev.yaml
 
       - name: Create version tag
         id: create_tag
